--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <input type="text" id="material" placeholder="Material"><br>
   <textarea id="observaciones" placeholder="Observaciones"></textarea><br>
   <button onclick="guardarNuevaVisita()">Guardar Visita</button>
-  <button type="button" onclick="cancelarFormularioVisita()">Cancelar</button>
+  <button  onclick="cancelarFormularioVisita()">Cancelar</button>
 </div>
 
 
