--- a/index.html
+++ b/index.html
@@ -132,7 +132,12 @@
         <label>Armazón:</label>
         <input type="text" name="armazon">
         <label>Graduación:</label>
-        <input type="text" name="graduacion">
+         <label>O.I:</label>
+        <input type="text" name="ojoiz">
+         <label>O.D:</label>
+        <input type="text" name="ojode">
+         <label>A.D.D:</label>
+        <input type="text" name="add">
         <label>Material:</label>
         <input type="text" name="material">
         <label>Orden de Compra (fecha):</label>
