--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
   <input type="date" id="orden" placeholder="Fecha de orden"><br>
   <input type="date" id="entrega" placeholder="Fecha de entrega"><br>
   <input type="text" id="armazon" placeholder="Armazón"><br>
-  <input type="text" id="graduacion" placeholder="Graduación"><br>
+   <label>Graduación:</label>
+  <input type="text" id="ojoiz" placeholder="O.I"><br>
+  <input type="text" id="ojode" placeholder="O.D"><br>
+  <input type="text" id="add" placeholder="A.D.D"><br>
   <input type="text" id="material" placeholder="Material"><br>
   <textarea id="observaciones" placeholder="Observaciones"></textarea><br>
   <button onclick="guardarNuevaVisita()">Guardar Visita</button>
