--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ ${
           Fecha de Orden: ${v.orden || "-"}<br>
           Fecha de Entrega: ${v.entrega || "-"}<br>
           Material: ${v.material || "-"}<br>
-          <label>Graduación:</label>
+          <label>Graduación</label><br>
           O.I: ${v.ojoiz || "-"}<br>
           O.D: ${v.ojode || "-"}<br>
           ADD.: ${v.add || "-"}<br>
