--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@ function guardarNuevaVisita() {
     orden: document.getElementById("orden").value,
     entrega: document.getElementById("entrega").value,
     armazon: document.getElementById("armazon").value,
-    ojoiz: document.getElementById("O.I").value,
-    ojode: document.getElementById("O.D").value,
-    add: document.getElementById("ADD.").value,
+    ojoiz: document.getElementById("ojoiz").value,
+    ojode: document.getElementById("ojode").value,
+    add: document.getElementById("add").value,
     material: document.getElementById("material").value,
     obse: document.getElementById("observaciones").value,
     fecha: new Date().toISOString()
