--- a/index.html
+++ b/index.html
@@ -553,9 +553,9 @@ function mostrarFormularioActualizarVisita(idCliente, index) {
         <label>Fecha de Orden: <input type="date" name="orden" value="${visita.orden || ""}" required></label><br>
         <label>Fecha de Entrega: <input type="date" name="entrega" value="${visita.entrega || ""}" required></label><br>
         <label>Material: <input type="text" name="material" value="${visita.material || ""}" required></label><br>
-        <label>O.I: <input type="text" name="O.I" value="${visita.ojoiz || ""}" required></label><br>
-        <label>O.D: <input type="text" name="O.D" value="${visita.ojode || ""}" required></label><br>
-        <label>ADD.: <input type="text" name="ADD." value="${visita.add || ""}" required></label><br>
+        <label>O.I: <input type="text" name="ojoiz" value="${visita.ojoiz || ""}" required></label><br>
+        <label>O.D: <input type="text" name="ojode" value="${visita.ojode || ""}" required></label><br>
+        <label>ADD.: <input type="text" name="add" value="${visita.add || ""}" required></label><br>
         <label>Armazón: <input type="text" name="armazon" value="${visita.armazon || ""}" required></label><br>
         <label>Observaciones: <textarea name="obse">${visita.obse || ""}</textarea></label><br>
         <button type="submit">Guardar cambios</button>
