--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ let pageSize = 15;
 </p>
 
 
-<button onclick="actualizarCliente('${id}')">Actualizar</button>
+<button onclick="actualizarCliente('id')">Actualizar</button>
 
       <button onclick="mostrarFormularioVisita('${id}')">Agregar visita</button>
       <button onclick="eliminarCliente('${id}')">Eliminar</button>
