--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ function actualizarCliente(id) {
   const clienteActualizado = {
   nombre: document.getElementById("nombre_" + id).value,
   telefono: document.getElementById("telefono_" + id).value,
-    fechaNcimiento: document.getElementById("fechaNacimiento_" + id).value,
+    fechaNacimiento: document.getElementById("fechaNacimiento_" + id).value,
   calle: document.getElementById("calle_" + id).value,
   colonia: document.getElementById("colonia_" + id).value,
   cp: document.getElementById("cp_" + id).value
