--- a/index.html
+++ b/index.html
@@ -519,7 +519,8 @@ function mostrarFormularioEdicion(id) {
       
       <input type="text" id="telefono_${id}" value="${cliente.telefono || ""}">
       <label>Fecha de Nacimiento:</label>
-      <input type="date" id="fechaNacimiento_${id}" value="${cliente.fechaNacimiento || ""}>
+      <input type="date" id="fechaNacimiento_${id}" value="${cliente.fechaNacimiento || ""}">
+
       
       <label>Calle:</label>
 <input type="text" id="calle_${id}" value="${cliente.calle || ""}">
