--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
         <input type="number" name="telefono">
         <label for="fechaNacimiento">Fecha de Nacimiento:</label>
         <input type="date" id="fechaNacimiento" name="fechaNacimiento" />
+<label>Sistema de apartado:</label>
+<input type="text" name="sistemaApartado" />
 
         <label>Observaciones:</label>
         <textarea name="obse"></textarea>
@@ -180,6 +182,8 @@
   <input type="text" id="ojoiz" placeholder="O.I"><br>
   <input type="text" id="add" placeholder="ADD."><br>
   <input type="text" id="material" placeholder="Material"><br>
+  <input type="text" id="sistemaApartado" placeholder="Sistema de apartado"><br>
+
   <textarea id="observaciones" placeholder="Observaciones"></textarea><br>
   <button onclick="guardarNuevaVisita()">Guardar Visita</button>
   <button  onclick="cancelarFormularioVisita()">Cancelar</button>
@@ -382,6 +386,7 @@ function agregarVisita(id) {
   const ojoiz = prompt("O.I:");
   const add = prompt("ADD.:");
     const material = prompt("Material:");
+    const sistemaApartado = prompt("Sistema de apartado:");
     const observaciones = prompt("Observaciones de la visita:");
 
     const nuevaVisita = {
@@ -392,6 +397,7 @@ function agregarVisita(id) {
       ojoiz,
       add,
       material,
+      sistemaApartado,
       observaciones,
       fecha: new Date().toISOString()
     };
@@ -483,6 +489,7 @@ function guardarNuevaVisita() {
     ojoiz: document.getElementById("ojoiz").value,
     add: document.getElementById("add").value,
     material: document.getElementById("material").value,
+    sistemaApartado: document.getElementById("sistemaApartado").value,
     obse: document.getElementById("observaciones").value,
     fecha: new Date().toISOString()
   };
@@ -582,6 +589,8 @@ function mostrarFormularioActualizarVisita(idCliente, index) {
         <label>O.I: <input type="text" name="ojoiz" value="${visita.ojoiz || ""}" ></label><br>
         <label>ADD.: <input type="text" name="add" value="${visita.add || ""}" ></label><br>
         <label>Armazón: <input type="text" name="armazon" value="${visita.armazon || ""}" ></label><br>
+        <label>Sistema de apartado: <input type="text" name="sistemaApartado" value="${visita.sistemaApartado || ""}"></label><br>
+
         <label>Observaciones: <textarea name="obse">${visita.obse || ""}</textarea></label><br>
         <button type="submit">Guardar cambios</button>
         <button type="button" onclick="cancelarEdicionVisita(${index})">Cancelar</button>
@@ -601,6 +610,8 @@ function guardarActualizacionVisita(event, idCliente, index) {
     ojoiz: form.ojoiz.value,
     add: form.add.value,
     armazon: form.armazon.value,
+    sistemaApartado: form.sistemaApartado.value,
+
     obse: form.obse.value
   };
 
