--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@ ${
           O.I: ${v.ojoiz || "-"}<br>
           ADD.: ${v.add || "-"}<br>
           Armazón: ${v.armazon || "-"}<br>
+          Sistema de apartado: ${v.sistemaApartado "-"}<br>
           Observaciones: ${v.obse || "-"}<br>
           <button onclick="mostrarFormularioActualizarVisita('${id}', ${i})">Actualizar visita</button>
           <button onclick="eliminarVisita('${id}', ${i})">Eliminar visita</button>
