--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
         <input type="number" name="telefono">
         <label for="fechaNacimiento">Fecha de Nacimiento:</label>
         <input type="date" id="fechaNacimiento" name="fechaNacimiento" />
+        <label>Edad:</label>
+<input type="number" name="edad" min="0">
+
 <label>Sistema de apartado:</label>
 <input type="text" name="sistemaApartado" />
 
@@ -316,6 +319,8 @@ let pageSize = 15;
       <h4>Cliente: ${cliente.nombre}</h4>
       <p><strong>Teléfono:</strong> ${cliente.telefono || "-"}</p>
       <p><strong>Fecha de Nacimiento:</strong> ${cliente.fechaNacimiento ? new Date(cliente.fechaNacimiento).toLocaleDateString() : "-"}</p>
+      <p><strong>Edad:</strong> ${cliente.edad || "-"}</p>
+
       <p><strong>Dirección:</strong><br>
   Calle: ${cliente.calle || "-"}<br>
   Colonia: ${cliente.colonia || "-"}<br>
@@ -365,6 +370,7 @@ function actualizarCliente(id) {
   nombre: document.getElementById("nombre_" + id).value,
   telefono: document.getElementById("telefono_" + id).value,
     fechaNacimiento: document.getElementById("fechaNacimiento_" + id).value,
+    edad: document.getElementById("edad_" + id).value,
   calle: document.getElementById("calle_" + id).value,
   colonia: document.getElementById("colonia_" + id).value,
   cp: document.getElementById("cp_" + id).value
@@ -437,6 +443,8 @@ function mostrarFormularioEdicionCompleta(id) {
     form.telefono.value = cliente.telefono || "";
     
     form.fechaNacimiento.value = cliente.fechaNacimiento || "";
+    form.edad.value = cliente.edad || "";
+
     form.sistemaApartado.value = cliente.sistemaApartado || "";
     form.obse.value = cliente.obse || "";
 
@@ -530,6 +538,8 @@ function mostrarFormularioEdicion(id) {
       <input type="text" id="telefono_${id}" value="${cliente.telefono || ""}">
       <label>Fecha de Nacimiento:</label>
       <input type="date" id="fechaNacimiento_${id}" value="${cliente.fechaNacimiento || ""}">
+<label>Edad:</label>
+<input type="number" id="edad_${id}" value="${cliente.edad || ""}">
 
       
       <label>Calle:</label>
